apps/case-studies/case-2-event-driven/k8s/kustomize/base/billingms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billingms
  labels:
    app.kubernetes.io/name: billingms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: billingms
  template:
    metadata:
      labels:
        app.kubernetes.io/name: billingms
    spec:
      containers:
        - name: billingms
          image: cargo2-billingms:0.0.1
          ports:
            - name: http
              containerPort: 8086
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 90
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: billingms
  labels:
    app.kubernetes.io/name: billingms
spec:
  selector:
    app.kubernetes.io/name: billingms
  ports:
    - name: http
      port: 8086
      targetPort: http
