apps/case-studies/case-2-event-driven/k8s/kustomize/base/bookingms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookingms
  labels:
    app.kubernetes.io/name: bookingms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bookingms
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bookingms
    spec:
      containers:
        - name: bookingms
          image: cargo2-bookingms:0.0.1
          ports:
            - name: http
              containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 90
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: bookingms
  labels:
    app.kubernetes.io/name: bookingms
spec:
  selector:
    app.kubernetes.io/name: bookingms
  ports:
    - name: http
      port: 8082
      targetPort: http
