apps/case-studies/case-2-event-driven/k8s/kustomize/base/handlingms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: handlingms
  labels:
    app.kubernetes.io/name: handlingms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: handlingms
  template:
    metadata:
      labels:
        app.kubernetes.io/name: handlingms
    spec:
      containers:
        - name: handlingms
          image: cargo2-handlingms:0.0.1
          ports:
            - name: http
              containerPort: 8085
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 90
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: handlingms
  labels:
    app.kubernetes.io/name: handlingms
spec:
  selector:
    app.kubernetes.io/name: handlingms
  ports:
    - name: http
      port: 8085
      targetPort: http
