apps/case-studies/case-2-event-driven/k8s/kustomize/base/routingms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routingms
  labels:
    app.kubernetes.io/name: routingms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: routingms
  template:
    metadata:
      labels:
        app.kubernetes.io/name: routingms
    spec:
      containers:
        - name: routingms
          image: cargo2-routingms:0.0.1
          ports:
            - name: http
              containerPort: 8083
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 90
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: routingms
  labels:
    app.kubernetes.io/name: routingms
spec:
  selector:
    app.kubernetes.io/name: routingms
  ports:
    - name: http
      port: 8083
      targetPort: http
