apps/case-studies/case-2-event-driven/k8s/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cargo-event
spec:
  ingressClassName: nginx
  rules:
    - host: cargo-event.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 80
